# shl-assessment-recommender

./: .env.example  .gitignore  Dockerfile  README.md  SHL_APPROACH.md.md  pyproject.toml  render.yaml
app/: __init__.py  config.py  main.py  schemas.py
app/agent/: __init__.py  graph.py  llm.py  state.py
app/agent/nodes/: __init__.py  clarifier.py  comparator.py  composer.py  guardrail.py  refuse.py  reranker.py  retriever.py  router.py  slot_extractor.py  validator.py
app/agent/prompts/: clarifier.md  comparator.md  composer.md  guardrail.md  reranker.md  router.md  slot_extractor.md
app/agent/prompts/_shared/: SKILL.md
app/observability/: __init__.py  tracing.py
app/retrieval/: __init__.py  bm25.py  dense.py  filters.py  fusion.py
data/: bm25.pkl  catalog.json  faiss.index  ids.npy  url_allowlist.txt
sample_conversations/GenAI_SampleConversations/: C1.md  C10.md  C2.md  C3.md  C4.md  C5.md  C6.md  C7.md  C8.md  C9.md
scripts/: build_indexes.py  scrape_catalog.py  test_llm.py
tests/unit/: __init__.py  test_filters.py  test_fusion.py  test_parse_md_traces.py  test_recall.py  test_schemas.py  test_validator.py
