[project]
name = "shl-recommender"
version = "1.0.0"
description = "Conversational SHL Assessment Recommender"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "pydantic-settings>=2",
    "rank_bm25>=0.2",
    "faiss-cpu>=1.7",
    "sentence-transformers>=3.0",
    "groq>=0.11",
    "google-generativeai>=0.8",
    "google-genai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "eval"]
